fixed header overflow

--- a/Home.css
+++ b/Home.css
@@ -29,6 +29,7 @@ body {
   width: 100%;
   background-color: #f1f1f1;
   padding: 20px 10px;
+  overflow-x: hidden;
 }
 
 .headerSection li {
